restructuring phase 2 mid